@@ -1,3 +1,9 @@
+2006-10-25  Nate Nielsen  <nielsen@memberwebs.com>
+
+	* libxml++/nodes/node.cc:
+	* libxml++/nodes/node.h: Node::get_next_sibling(), 
+	Node::get_previous_sibling(). Bug #351867
+
 2006-11-17  Nate Nielsen  <nielsen@memberwebs.com>
 
 	* libxml++/parsers/textreader.cc
